Update current coin

--- a/k8s/secrets.yml
+++ b/k8s/secrets.yml
@@ -8,7 +8,7 @@ stringData:
     [binance_user_config]
     api_key=#{BINANCE_API_KEY}#
     api_secret_key=#{BINANCE_API_SECRET_KEY}#
-    current_coin=
+    current_coin=VET
     bridge=USDT
     tld=com
     hourToKeepScoutHistory=1
