--- a/k8s/secrets.yml
+++ b/k8s/secrets.yml
@@ -14,7 +14,7 @@ stringData:
     hourToKeepScoutHistory=1
     scout_multiplier=5
     scout_sleep_time=2
-    strategy=multiple_coins
+    strategy=default
     buy_timeout=0
     sell_timeout=0
 
